# AI-healthCare-project

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint.json  BRANCH_REVIEW.md  BRANCH_STATUS.md  CLEANUP_BRANCHES.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  DATABASE_MIGRATION_SUMMARY.md  Dockerfile  Dockerfile.frontend  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  LICENSE  NEXT_STEPS.md  NEXT_STEPS_SUMMARY.md  OAUTH_IMPLEMENTATION_ORDER.md  PHASE_2_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  PYTHON_SETUP_GUIDE.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  TESTING_SUMMARY.md  alembic.ini  check_torch.py  cleanup_remote_branches.ps1  debug_flow.py  debug_flow_urllib.py  debug_pdf.py  demo.py  disable_windows_store_python.ps1  docker-compose.yml  extract_pdf.py  package-lock.json  pyproject.toml  (+12 more)
.github/: dependabot.yml
alembic/: env.py
backend/: DATABASE_SETUP_GUIDE.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  PROJECT_STATUS.md  __init__.py  alert_service.py  analysis_cache.py  aot_reasoner.py  audit_service.py  cspell.json  document_service.py  explainability.py  fhir_connector.py  fhir_http_client.py  fhir_resource_service.py  llm_engine.py  main.py  mlc_learning.py  models.py  notification_service.py  notifier.py  patient_analyzer.py  patient_data_service.py  rag_fusion.py  recommendation_service.py  requirements.txt  risk_scoring_service.py  rl_agent.py  s_lora_manager.py  security.py
desktop/: app.py
docs/: CODE_QUALITY_AND_SECURITY_IMPROVEMENTS.md  DEVELOPER_GUIDE.md  ENHANCEMENT_PROPOSAL.md  FINAL_IMPROVEMENTS_REPORT.md  GLOBAL_IMPROVEMENT_PLAN.md  HL7_V2_EXPANSION_PROPOSAL.md  IMPLEMENTATION_PRIORITY.md  IMPROVEMENTS_SUMMARY.md  MEDWALLET_INTEGRATION_PLAN.md  MIDDLEWARE_IMPLEMENTATION.md  OAUTH_HEALTHCARE_CONSIDERATIONS.md  OAUTH_IMPLEMENTATION_ORDER.md  OAUTH_IMPLEMENTATION_PLAN.md  OAUTH_SETUP.md  PORTS.md  SECURITY_IMPROVEMENTS.md  di_migration_status.md  react_frontend_plan.md  testing-validation.md
experiments/: rl_policy_demo.py
frontend/: app.py  requirements.txt
mobile/: .gitignore  App.js  README.md  app.json  package.json
models/: request_models.py
react_frontend/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tests/: TESTING_PLAN.md  conftest.py  test_adapter_endpoints.py  test_alert_service.py  test_auth.py  test_auth_endpoints.py  test_auto_update.py  test_cache_controls.py  test_cache_utils.py  test_calendar_endpoints.py  test_calendar_integration.py  test_calendar_token_refresh.py  test_clinical_gnn.py  test_compliance_policies.py  test_consent_flow.py  test_dashboard_endpoint.py  test_data_deletion.py  test_database.py  test_document_endpoints.py  test_e2e_user_flows.py  test_email_service.py  test_email_service_enhanced.py  (+58 more)
(+224 files in other folders)
