[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-healthcare-project"
version = "0.1.0"
description = "AI Healthcare project backend and utilities"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI HealthCare Team" }]
keywords = ["healthcare", "fastapi", "ai"]
dependencies = [
  "fastapi==0.128.0",
  "uvicorn[standard]==0.40.0",
  "pydantic==2.12.5",
  "python-dotenv==1.2.1",
  "httpx[socks]==0.28.1",
  "trio==0.32.0",
  "python-socks==2.8.0",
  "python-jose[cryptography]==3.5.0",
  "openai==1.3.0",
  "anthropic==0.75.0",
  "sentence-transformers==2.2.2",
  "torch==2.9.1",
  "transformers==4.57.3",
  "fhir.resources==7.1.0",
  "hl7==0.4.5",
  "pandas==2.3.3",
  "numpy==1.26.4",
  "scikit-learn==1.7.2",
  "shap==0.49.1",
  "matplotlib==3.10.8",
  "sqlalchemy==2.0.45",
  "alembic==1.17.2",
  "requests==2.32.5",
  "beautifulsoup4==4.14.3",
  "pyyaml==6.0.3"
]

[project.optional-dependencies]
test = [
  "httpx[socks]==0.28.1",
  "pytest==7.4.0",
  "pytest-asyncio==0.21.0",
  "pytest-cov==4.1.0"
]

[project.urls]
Homepage = "https://example.com/ai-healthcare"
Repository = "https://example.com/ai-healthcare/repo"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
