[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-healthcare-project"
version = "0.1.0"
description = "AI Healthcare project backend and utilities"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI HealthCare Team" }]
keywords = ["healthcare", "fastapi", "ai"]
dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "pydantic==2.5.0",
  "python-dotenv==1.0.0",
  "httpx[socks]==0.25.0",
  "trio==0.22.2",
  "python-socks==2.4.1",
  "python-jose[cryptography]==3.3.0",
  "openai==1.3.0",
  "anthropic==0.7.0",
  "sentence-transformers==2.2.2",
  "torch==2.2.0",
  "transformers==4.35.0",
  "fhir.resources==7.1.0",
  "hl7==0.4.5",
  "pandas==2.2.3",
  "numpy==1.26.4",
  "scikit-learn==1.3.0",
  "shap==0.44.1",
  "matplotlib==3.7.3",
  "sqlalchemy==2.0.0",
  "alembic==1.13.0",
  "requests==2.31.0",
  "beautifulsoup4==4.12.0",
  "pyyaml==6.0"
]

[project.optional-dependencies]
test = [
  "httpx[socks]==0.25.0",
  "pytest==7.4.0",
  "pytest-asyncio==0.21.0",
  "pytest-cov==7.0.0"
]

[project.urls]
Homepage = "https://example.com/ai-healthcare"
Repository = "https://example.com/ai-healthcare/repo"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
